--- a/style.css
+++ b/style.css
@@ -57,9 +57,7 @@ nav {
 /* Banner digain */
 .banner-container {
   width: 100%;
-  border: 2px saddlebrown solid;
   /* min-height: 400px; */
-  border-radius: 16px;
   border-radius: 16px;
   background: linear-gradient(
       180deg,
@@ -72,6 +70,7 @@ nav {
   background-position: center;
   object-fit: cover;
   text-align: center;
+  padding-bottom: 1px;
 }
 .banner-title {
   color: #fff;
@@ -96,6 +95,7 @@ header .banner .input {
   display: flex;
   justify-content: space-around;
   align-items: center;
+  border-radius: 10px;
 }
 .input-text {
   border-radius: 8px;
@@ -131,14 +131,14 @@ header .banner .input {
   font-weight: 800;
   margin-bottom: 24px;
 }
-.popular-Tours-ls > ul > li{
-    color: rgba(19, 19, 24, 0.7);
-    font-size: 16px;
-    font-weight: 400;
-    margin-bottom: 24px;
+.popular-Tours-ls > ul > li {
+  color: rgba(19, 19, 24, 0.7);
+  font-size: 16px;
+  font-weight: 400;
+  margin-bottom: 24px;
 }
-.popular-Tours-ls > ul{
-    padding: 0px 1rem;
+.popular-Tours-ls > ul {
+  padding: 0px 1rem;
 }
 .popular-Tours-rs {
   width: 50%;
@@ -146,4 +146,68 @@ header .banner .input {
 }
 .popular-Tours-rs img {
   width: 80%;
+}
+@media screen and (max-width: 600px) {
+  main,
+  header {
+    max-width: 1440px;
+    width: 95%;
+    margin: 10px auto;
+  }
+  nav {
+    flex-direction: column;
+  }
+  .nav-rs {
+    display: flex;
+    gap: 10px;
+    align-items: center;
+  }
+  .nav-rs a {
+    text-decoration: none;
+    color: var(--Dark-02, #424247);
+    font-size: 0.8rem;
+    font-weight: 400;
+  }
+  .banner-title {
+    color: #fff;
+    font-size: 30px;
+    font-weight: 800;
+    padding-top: 5rem;
+    margin-bottom: 24px;
+  }
+  .banner-contain {
+    font-size: 12px;
+  }
+  header .banner .input {
+    flex-direction: column;
+    padding: 20px 0px;
+  }
+   .input-text {
+    width: 80%;
+  }
+  header .banner .input>.pry-button {
+    width: 80%;
+    padding: 13px 5px;
+  }
+  .Popular-Tours{
+    flex-direction: column;
+  }
+  .popular-Tours-ls {
+    width: 95%;
+  }
+  .popular-Tours-ls>.pry-button{
+    width: 50%;
+  }
+  .popular-Tours-rs{
+    width: 95%;
+    text-align: center;
+    margin-top: 50px;
+  }
+  .popular-Tours-rs > img{
+    width: 95%;
+    
+  }
+  /* Nav , banner popular travel responsive complrte */
+  
+
 }
