--- a/style.css
+++ b/style.css
@@ -147,6 +147,82 @@ header .banner .input {
 .popular-Tours-rs img {
   width: 80%;
 }
+
+/* gallay section suru */
+
+.choose > h1 {
+  text-align: center;
+  margin-top: 100px;
+  color: #131318;
+  font-size: 40px;
+  font-weight: 800;
+}
+.choose > p{
+  text-align: center;
+  margin: 24px 0px;
+}
+.choose .gallary img {
+  width: 100%;
+
+  height: 300px;
+  border-radius: 10px;
+}
+.choose .gallary {
+  display: grid;
+  /* grid-template-rows: repeat(3, 1fr); */
+  grid-template-columns: repeat(24, 1fr);
+  margin-top: 40px;
+  gap: 10px;
+  object-fit: contain;
+  grid-template-areas:
+    "a a a a a a a a a a a a b b b b b b b b b b b b"
+    "c c c c c c c d d d d d d d d d d d e e e e e e"
+    "f f f f f f f f f f f g g g g g g g g g g g g g";
+}
+.img-1 {
+  grid-area: a;
+  position: relative;
+  text-align: center;
+}
+.img-text {
+  position: absolute;
+  bottom: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.img-text > h1 {
+  color: #fff;
+  text-align: center;
+  font-family: Mulish;
+  font-size: 28px;
+  font-style: normal;
+  font-weight: 800;
+  line-height: normal;
+}
+.img-2 {
+  grid-area: b;
+  position: relative;
+}
+.img-3 {
+  grid-area: c;
+  position: relative;
+}
+.img-4 {
+  grid-area: d;
+  position: relative;
+}
+.img-5 {
+  grid-area: e;
+  position: relative;
+}
+.img-6 {
+  grid-area: f;
+  position: relative;
+}
+.img-7 {
+  grid-area: g;
+  position: relative;
+}
 @media screen and (max-width: 600px) {
   main,
   header {
@@ -182,32 +258,42 @@ header .banner .input {
     flex-direction: column;
     padding: 20px 0px;
   }
-   .input-text {
+  .input-text {
     width: 80%;
   }
-  header .banner .input>.pry-button {
+  header .banner .input > .pry-button {
     width: 80%;
     padding: 13px 5px;
   }
-  .Popular-Tours{
+  .Popular-Tours {
     flex-direction: column;
   }
   .popular-Tours-ls {
     width: 95%;
   }
-  .popular-Tours-ls>.pry-button{
+  .popular-Tours-ls > .pry-button {
     width: 50%;
   }
-  .popular-Tours-rs{
+  .popular-Tours-rs {
     width: 95%;
     text-align: center;
     margin-top: 50px;
   }
-  .popular-Tours-rs > img{
+  .popular-Tours-rs > img {
     width: 95%;
-    
   }
   /* Nav , banner popular travel responsive complrte */
-  
-
+  .choose .gallary {
+    grid-template-areas:
+      "a a a a a a a a a a a a a a a a a a a a a a a a"
+      "b b b b b b b b b b b b b b b b b b b b b b b b"
+      "c c c c c c c c c c c c c c c c c c c c c c c c"
+      "d d d d d d d d d d d d d d d d d d d d d d d d"
+      "e e e e e e e e e e e e e e e e e e e e e e e e"
+      "f f f f f f f f f f f f f f f f f f f f f f f f"
+      "g g g g g g g g g g g g g g g g g g g g g g g g";
+  }
+  .choose .gallary img {
+    height: 176px;
+  }
 }
